[package]
name = "ocontrollertextinput"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ocontrollertextinput_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- 异步任务（后台监听手柄输入） ---
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }

# --- 手柄输入库（支持 XInput） ---
gilrs = "0.10"

# --- Windows API（未来扩展：TSF、窗口、低级API） ---
windows = { version = "0.54", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_TextServices",
  "Win32_System_Com",
  "Win32_UI_WindowsAndMessaging"
]}

# --- 正则（用于拼音过滤和词匹配） ---
regex = "1.10"

# --- 字符串映射（全局静态变量工具 九宫格 key → 拼音） ---
lazy_static = "1.4"

# --- 拼音处理 ---
pinyin = "0.10"

# --- SQLite 支持 ---
rusqlite = { version = "0.31", features = ["bundled"] }
